Fix bugs and update dependencies
Categories page build error.
Homepage looks ugly before loaded.

--- a/dev/src/css/style.css
+++ b/dev/src/css/style.css
@@ -124,6 +124,7 @@ header>i>svg {
 
 aside {
   position: fixed;
+  display: none;
   top: 0;
   bottom: 0;
   left: 0;
